for last editing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="https://img.freepik.com/free-photo/rag-doll-blue-word-career_1156-192.jpg?t=st=1739883771~exp=1739887371~hmac=4b0d35c9e98f79ce532334d31354380ce52d98c134540810c6dff36ab2b7ed61&w=826" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Job Portal</title>
   </head>
   <body>
     <div id="root"></div>
